- Added BarUtil to select a NumFactory from the first available bar price, with a clear error when prices are missing - Updated DurationBarAggregator and BaseBarSeriesBuilder to use BarUtil